<resources>
    <string name="app_name">Retro Board</string>
    <string name="more">More</string>
    <string name="content_description_item">More menu item</string>
    <string name="title_main_fragment">Main Fragment</string>
    <string name="boards">Boards</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="about_us">About us</string>
    <string name="boards_text">Boards Fragment</string>
    <string name="history_text">History Fragment</string>
    <string name="about_us_text">About us Fragment</string>
    <string name="profile_text">Profile screen</string>
    <string name="sign_in_cancelled">Sign-in flow cancelled!</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_log_out_description">Log out</string>
    <string name="title_activity_offline">OfflineActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_text_card">Name NameName Name  NameName NameNameName NameNameNameName Name</string>
    <string name="offline_text">You are offline!\nMake sure you are connected to the internet </string>
    <string name="offline_pic_desc">No internet</string>
    <string name="header_display_name">name</string>
    <string name="header_email_address">e-mail</string>
    <string name="avatar_desc">The user\'s avatar</string>
    <string name="licenses_text">Licenses</string>
    <string name="more_drawer">More</string>
    <string name="desc_nav_menu_board">Board in navigation drawer</string>
    <string name="desc_nav_menu_history">History in navigation drawer</string>
    <string name="desc_nav_menu_profile">Profile in navigation drawer</string>
    <string name="desc_nav_menu_more">More in navigation drawer</string>
    <string name="desc_nav_menu_about_us">About us in navigation drawer</string>
    <string name="desc_screen_board">Board screen</string>
    <string name="desc_screen_history">History screen</string>
    <string name="desc_screen_profile">Profile screen</string>
    <string name="desc_screen_more">More screen</string>
    <string name="desc_screen_retro">Retro screen</string>
    <string name="desc_screen_about_us">About us screen</string>
    <string name="add_board_button">ADD A NEW BOARD</string>
    <string name="add_retro_button">ADD A NEW CARD</string>
    <string name="add_the_users_button">ADD A NEW USERS TO THE BOARD</string>
    <string name="desc_floating_button">Floating button</string>
    <string name="desc_no_boards_image">Image that appears when there is no boards</string>
    <string name="retro_card_input_hint">Note</string>
    <string name="desc_board_edit_text_button">Text button to add the board</string>
    <string name="error_board_card_message_1">Something went wrong</string>
    <string name="error_about_us_message">Something went wrong</string>
    <string name="no_boards_up_label">There are no boards added.</string>
    <string name="no_boards_bottom_label">Go ahead and add a new board!</string>
    <string name="desc_api_error">Red circle with X in it</string>
    <string name="dummy_developer_name">Jan Kowalski</string>
    <string name="dummy_developer_role">Android Developer</string>
    <string name="dummy_developer_email">kowalski.jan@gmail.com</string>
    <string name="dummy_developer_github">https://github.com/JanKowalski</string>
    <string name="desc_dev_card">Dev card</string>
    <string name="desc_dev_email">Developer email</string>
    <string name="desc_dev_github">Developer github link</string>
    <string name="desc_user_card">User card</string>
    <string name="desc_user_email">User email</string>
    <string name="desc_add_user_text_button">Text button to add new user for a board</string>
    <string name="desc_retro_edit_icon">Icon to edit retro card</string>
    <string name="desc_delete_board_icon">Icon to delete the board</string>
    <string name="edit_board_button">UPDATE A BOARD</string>
    <string name="user_email">User email</string>
    <string name="error_add_user_to_board">Something went wrong</string>
    <string name="add_the_user_button">ATTACH THE USER</string>
    <string name="searching">searching…</string>
    <string name="no_matching_results">No matching results.</string>
    <string name="send_email_subject">Retro Board App, Android Developer&#160;</string>
    <string name="question_to_user_before_choose_email_app">Choose an Email client:</string>
    <string name="greetings_to_developer">Hello&#160;</string>
    <string name="email_text_to_developer">\n\nI write to you…</string>
    <string name="mail_message_type">message/rfc822</string>
    <string name="text_button_edit">Edit</string>
    <string name="text_button_add_user">Add user</string>
    <string name="alert_dialog_title">Remove board</string>
    <string name="alert_dialog_positive_button">YES</string>
    <string name="alert_dialog_negative_button">"CANCEL"</string>
    <string name="votes_limit">You\'ve reached votes limit</string>
    <string name="no_more_votes_error">You have no more votes</string>
    <string name="error_one_vote_limit">Only one vote per card</string>
    <string name="voted">Voted</string>
    <string name="success_board_state">The Board state changed</string>
    <string name="desc_menu_next_state">Changes the state of the board</string>
    <string name="menu_next_state">Next state</string>
    <string name="state_changed">#State changed</string>
    <string name="update_before_change_state">You need to update board before you can change state</string>
</resources>
