<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/boardsFragment"
        android:contentDescription="@string/desc_nav_menu_board"
        android:icon="@drawable/ic_boards_icon"
        android:title="@string/boards" />
    <item
        android:id="@+id/historyFragment"
        android:contentDescription="@string/desc_nav_menu_history"
        android:icon="@drawable/ic_history_icon"
        android:title="@string/history" />
    <item
        android:id="@+id/profileFragment"
        android:contentDescription="@string/desc_nav_menu_profile"
        android:icon="@drawable/ic_profile_icon"
        android:title="@string/profile" />
    <item
        android:id="@+id/moreFragment"
        android:contentDescription="@string/desc_nav_menu_more"
        android:icon="@drawable/ic_more_icon"
        android:title="@string/more_drawer" />
    <item
        android:id="@+id/aboutUsFragment"
        android:contentDescription="@string/desc_nav_menu_about_us"
        android:icon="@drawable/ic_about_us_temp_icon"
        android:title="@string/about_us" />
</menu>
