<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/desc_dev_card">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_about_us"
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

            <View
                android:id="@+id/separator_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="87dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="17dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/developer_email_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/developer_github_text"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="18dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="1dp"
                android:text="@string/dummy_developer_github"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/developer_github_icon"
                app:layout_constraintTop_toBottomOf="@+id/developer_email_text"
                app:layout_constraintVertical_bias="0.8" />

            <TextView
                android:id="@+id/developer_email_text"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="44dp"
                android:paddingTop="1dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dummy_developer_email"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/developer_email_icon" />

            <TextView
                android:id="@+id/developer_role_text"
                android:layout_width="276dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="92dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/dummy_developer_role"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/avatar_image"
                app:layout_constraintTop_toBottomOf="@+id/developer_name_text"
                app:layout_constraintVertical_bias="0.333" />

            <TextView
                android:id="@+id/developer_name_text"
                android:layout_width="275dp"
                android:layout_height="28dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:ellipsize="end"
                android:gravity="top"
                android:maxLines="1"
                android:text="@string/dummy_developer_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/avatar_image"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/developer_email_icon"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="42dp"
                android:contentDescription="@string/desc_dev_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/developer_email_text"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_baseline_email_24" />

            <ImageView
                android:id="@+id/developer_github_icon"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/desc_dev_github"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/developer_github_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/developer_email_icon"
                app:layout_constraintVertical_bias="0.384"
                app:srcCompat="@drawable/ic_github_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
